# Corty

./: .gitignore  Dockerfile  HISTORY.rst  Jenkinsfile  LICENSE  LICENSE.md  Makefile  README.md  TODO.todo  corty.py  daisho.py  pip-selfcheck.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: docker-publish.yml
containers/: Dockerfile
corty/: TODO.md  corty.py
corty/client/: add.py  cli.py  del.py  list.py  search.py
corty/db/: db_connector.py  db_connectory.py  db_heartbeat.py
corty/helpers/: config.py  logger.py
corty/server/: main.py  schema.py
daisho/: .daisho.py.swp  .travis.yml  TODO.md  TODO.todo  __init__.py  add_tasks.py  cli.py  daisho-qt.py  daisho.py  daisho_add.py  daisho_db.py  daisho_del.py  daisho_list.py  daisho_logger.py  daisho_search.py  new.py  settings.py
daisho/.github/: ISSUE_TEMPLATE.md
daisho/client/: daisho_add.py  daisho_cli.py  daisho_del.py  daisho_list.py  daisho_search.py
daisho/helpers/: daisho_config.py
daisho/server/: api_methods.py  main.py
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
src/: TODO.md  __init__.py  corty.py  daisho-back.py  daisho.py
src/client/: add.py  cli.py  daisho_add.py  daisho_cli.py  daisho_config.py  daisho_del.py  daisho_list.py  daisho_logger.py  daisho_prompt.py  del.py  list.py  search.py
src/daisho/: daisho.py
src/db/: db_connector.py
src/helpers/: config.py  daisho_help.py  help.py  logger.py  progress.py
tests/: __init__.py  test_daisho.py  test_version.py
(+6 files in other folders)
