[tool.poetry]
name = "daisho"
version = "0.1.0"
description = "Task manager"
authors = ["Vimal A R <arvimal81@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
prompt-toolkit = "^3.0.17"
Pygments = "^2.8.1"
pymongo = "^3.11.3"
graphene = "^2.1.8"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
