[tool.poetry]
name = "corty"
version = "0.1.0"
description = "Corty, What Am I?"
authors = ["Vimal A R <arvimal81@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
ipython = "^8.3.0"
pymongo = "^4.1.1"
pytest = "^7.1.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
